--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
+    "express-validator": "^6.9.2",
     "handlebars": "^4.7.6",
     "mongoose": "^5.9.26",
+    "nodemailer": "^6.4.18",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
