--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^6.9.2",
     "handlebars": "^4.7.6",
     "mongoose": "^5.9.26",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.18",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "uuid": "^8.2.0"
